开发基本完成

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -15,7 +15,7 @@
     "backgroundColor": "#fff",
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "网卡配置助手",
+    "navigationBarTitleText": "Additel Things",
     "navigationBarTextStyle": "black"
   },
   "style": "v2",
