--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "@yanshouwang/lottie-wmc": "^1.0.3",
     "decode-utf8": "^1.0.1",
     "encode-utf8": "^1.0.3",
-    "lottie-miniprogram": "^1.0.7",
     "weui-miniprogram": "^0.2.2"
   },
   "devDependencies": {
-    "miniprogram-api-typings": "^2.8.3-1",
-    "typescript": "^3.3.3333"
+    "miniprogram-api-typings": "^2.10.4",
+    "typescript": "^3.8.3"
   }
 }
