--- a/project.config.json
+++ b/project.config.json
@@ -31,7 +31,9 @@
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
-		}
+		},
+		"useCompilerModule": true,
+		"userConfirmedUseCompilerModuleSwitch": true
 	},
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
