修复设置WIFI内容为空的 BUG

--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"useCompilerModule": true,
+		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": true
 	},
 	"simulatorType": "wechat",
